--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -1,3 +1,21 @@
-.title {
-    color: #fff;
+.header {
+    background: #F0F5FF;
+    padding: 16px 24px;
+    line-height: normal;
+    height: auto;
+}
+
+.headerBreadcramp {
+    font-weight: 400;
+    font-size: 14px;
+    color: #262626;
+}
+
+.headerContentTitleBlock {
+    display: flex;
+    justify-content: space-between;
+}
+
+.headerTitle {
+    max-width: 900px;
 }
