--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -24,3 +24,41 @@
     padding: 24px;
     background: #fff;
 }
+
+.list {
+    max-width: 752px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+}
+
+.list__item {
+    background: #fff;
+    text-align: center;
+    width: 240px;
+}
+
+.list__item_title {
+    padding: 10px 0;
+    border-bottom: 1px solid #F0F0F0;
+    font-weight: 500;
+    font-size: 16px;
+    color: #262626;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
+.content__span {
+    display: inline-block;
+    color: #2F54EB;
+}
+
+.content__img {
+    width: 12px;
+    height: 12px;
+}
