--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -1,4 +1,5 @@
 .mainWrapper {
+    height: 100%;
     background: url('../../assets/bg/main-bg.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
