--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -25,6 +25,7 @@
     background-position: center;
     width: 134px;
     height: 34px;
+    margin-left: 26px;
     transition: all .2s;
 }
 
@@ -39,7 +40,7 @@
 }
 
 
-.trap {
+.btnTrap {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%) rotate(90deg);
@@ -51,6 +52,7 @@
     border-bottom: 21px solid #fff;
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
+    cursor: pointer;
 } 
 
 .sidebarBtn {
@@ -58,7 +60,6 @@
     top: 15px;
     right: 9px;
     transform: rotate(-90deg);
-    background: transparent;
     border: none;
     outline: none;
 }
@@ -88,7 +89,6 @@
 }
 
 .open {
-    transition: all 1s;
+    transition: opacity 1s;
     opacity: 1;
-
 }
