--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -19,3 +19,45 @@
 .headerTitle {
     max-width: 900px;
 }
+
+.settingBtnBlock {
+    height: 100%;
+}
+
+.settingImgWrapper {
+    display: none;
+}
+
+
+/* Уважаемый проверяющий. Я не нашёл другого способа кроме !important. Можете посоветовать какой-нибудь другой способ? */
+@media(max-width: 1001px){
+    .headerTitle {
+        font-size: 24px !important;
+    }
+
+    .settingsImg {
+        display: none !important;
+    }
+}
+
+@media(max-width: 674px){
+    .headerTitle {
+        font-size: 20px !important;
+    }
+
+    .settingBtn {
+        display: none;
+    }
+
+    .settingImgWrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        border: 1px solid rgb(217, 217, 217);
+    }
+
+}
+
