--- a/src/components/MainCartItem/MainCartItem.module.css
+++ b/src/components/MainCartItem/MainCartItem.module.css
@@ -1,12 +1,12 @@
 .list__item {
     background: #fff;
     text-align: center;
-    width: 240px;
+    flex: 0 1 240px;
 }
 
 .list__item_title {
     padding: 10px 0;
-    border-bottom: 1px solid #F0F0F0;
+    border-bottom: 1px solid #f0f0f0;
     font-weight: 500;
     font-size: 16px;
     color: #262626;
@@ -21,10 +21,32 @@
 
 .content__span {
     display: inline-block;
-    color: #2F54EB;
+    color: #2f54eb;
 }
 
 .content__img {
     width: 12px;
     height: 12px;
+}
+
+@media (max-width: 990px) {
+    .list__item {
+        flex: 1 1 182px;
+    }
+    .list__item_title {
+        text-align: left;
+        padding: 10px 10px 10px 24px;
+    }
+}
+
+@media (max-width: 674px) {
+    .list__item:last-child .list__item_title {
+        text-align: center;
+    }
+}
+
+@media (max-width: 627px) {
+    .list__item .list__item_title {
+        text-align: center;
+    }
 }
