--- a/src/components/MainCartList/MainCartList.module.css
+++ b/src/components/MainCartList/MainCartList.module.css
@@ -2,6 +2,22 @@
     max-width: 752px;
     display: flex;
     justify-content: space-between;
+    gap: 16px;
     margin-top: 24px;
     margin-bottom: 120px;
 }
+
+@media(max-width: 834px){
+    .list {
+        margin-bottom: 260px;
+    }
+}
+
+@media(max-width: 674px){
+    .list {
+        flex-wrap: wrap;
+        margin-bottom: 24px;
+    }
+}
+
+
