--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -23,6 +23,7 @@
     background: url('../../assets/icons/logo.svg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     width: 134px;
     height: 34px;
     margin-left: 26px;
@@ -53,7 +54,7 @@
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
     cursor: pointer;
-} 
+}
 
 .sidebarBtn {
     position: absolute;
@@ -78,6 +79,7 @@
     line-height: 130%;
     color: #262626;
     margin-bottom: 12px;
+    padding-left: 4px;
 }
 
 .exitImg {
@@ -91,4 +93,83 @@
 .open {
     transition: opacity 1s;
     opacity: 1;
+}
+
+@media(max-width: 600px) {
+    .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        height: 100%;
+        max-height: 640px;
+        -webkit-box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
+        box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
+    }
+
+    .menuHide {
+        transform: translateX(-80px);
+    }
+
+    .btnTrap {
+        z-index: 3;
+        top: 42px;
+        right: -43px;
+        width: 60px;
+        padding: 0;
+        border-bottom: 38px solid #fff;
+        border-left: 13px solid transparent;
+        border-right: 14px solid transparent;
+        filter: drop-shadow(0 -9px 6px rgba(34, 60, 80, 0.2));
+    }
+
+    .sidebarBtn {
+        top: 2px;
+        right: 1px;
+    }
+
+    .exitImg,
+    .exitImgHide {
+        display: none;
+    }
+
+    .open {
+        margin-left: 16px;
+    }
+
+    .logoSmall {
+        display: none;
+    }
+}
+
+@media(max-width: 400px) {
+    .menu {
+        width: 124px !important;
+        min-width: 124px !important;
+    }
+
+    .menuHide {
+        transform: translateX(-124px);
+    }
+
+    .menuLogo {
+        margin-top: 16px;
+        margin-bottom: 32px;
+    }
+
+    .logo {
+        width: 72px;
+        height: 18px;
+    }
+
+    .menuWrapperItemExit {
+        justify-content: center;
+        padding-left: 0;
+    }
+
+    .open {
+        margin-left: 0;
+    }
+
 }
