--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@ body {
 .ant-menu-item {
     margin-bottom: 18px !important;
 }
+
+@media(max-width: 600px) {
+    .ant-menu-item-icon {
+        display: none !important;
+    }
+}
+
