--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -1,9 +1,8 @@
 .mainWrapper {
-    height: 100%;
     background: url('../../assets/bg/main-bg.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position:  top center;
     padding: 24px 24px 42px 24px;
 }
 
