--- a/src/components/MainCartList/MainCartList.module.css
+++ b/src/components/MainCartList/MainCartList.module.css
@@ -7,12 +7,19 @@
     margin-bottom: 120px;
 }
 
+@media(max-width: 835px) {
+    .list {
+        margin-bottom: 260px;
+    }
+}
 
 
 @media(max-width: 674px){
     .list {
         flex-wrap: wrap;
+        margin-bottom: 24px;
     }
 }
+
 
 
