--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -86,12 +86,27 @@
 }
 
 .hide {
+    transition: opacity .5s;
     opacity: 0;
 }
 
 .open {
-    transition: opacity 1s;
+    transition: opacity .5s;
     opacity: 1;
+}
+
+.hidet {
+    position: relative;
+    top: 2px;
+    transition: color .5s;
+    color: #fff !important;
+}
+
+.opent {
+    position: relative;
+    top: 2px;
+    transition: color .4s ease-in-out;
+    color: #262626;
 }
 
 
