--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -54,7 +54,7 @@
 
 .cartDownloadLink {
     display: block;
-    color: #262626 !important;
+    margin-bottom: 10px;
 }
 
 .cartDownloadText {
@@ -86,6 +86,13 @@
 
     .cartDownload {
         order: 1;
+    }
+}
+
+@media(max-width: 672px) {
+    .cartDownload {
+        text-align: center;
+        width: 100%;
     }
 }
 
