--- a/src/components/MainCartItem/MainCartItem.module.css
+++ b/src/components/MainCartItem/MainCartItem.module.css
@@ -25,8 +25,9 @@
 }
 
 .content__img {
-    width: 12px;
-    height: 12px;
+    width: 14px;
+    height: 14px;
+    object-fit: contain;
 }
 
 @media (max-width: 990px) {
