--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,13 @@ button {
     border-color: #2F54EB;
   }
 
+  .ant-input-wrapper input {
+    height: 40px;
+  }
+
+  .ant-input-affix-wrapper input {
+    height: 30px;
+  }
 
 @media(max-width: 600px) {
     .ant-menu-item-icon {
