add start register

--- a/src/pages/layouts/layout-auth-page/layout-auth-page.module.css
+++ b/src/pages/layouts/layout-auth-page/layout-auth-page.module.css
@@ -1,13 +1,12 @@
 .wrapperAuth {
-    max-height: 100vh;
+    height: 100vh;
     background: url('../../../assets/bg/auth-bg.jpeg');
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 140px 0;
 }
 
 .wrapperAuthBlock {
