--- a/src/pages/register-page/register-page.module.css
+++ b/src/pages/register-page/register-page.module.css
@@ -31,3 +31,9 @@
     background: '#2F54EB';
     border: '1px solid #2F54EB'
 }
+
+.regBtn {
+    background: #2F54EB;
+    border: 1px solid #2F54EB;
+    width: 100%;
+}
