--- a/src/pages/layouts/layout-result-page/layout-result-page.module.css
+++ b/src/pages/layouts/layout-result-page/layout-result-page.module.css
@@ -2,10 +2,9 @@
     height: 100vh;
     background: url('../../../assets/bg/auth-bg.jpeg');
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 140px 0;
 }
