--- a/src/pages/login-page/login-page.module.css
+++ b/src/pages/login-page/login-page.module.css
@@ -25,6 +25,8 @@
     font-weight: 400;
     font-size: 16px;
     color: #2F54EB;
+    border: none;
+    background: transparent;
 }
 
 .formBtn {
