--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,32 @@ button {
     height: 30px;
   }
 
+
+  .container {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+
+  .character {
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+    cursor: default;
+    user-select: none;
+    background: transparent;
+    box-sizing: border-box;
+    border: 1px solid #D9D9D9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .character.bgc {
+    border: 1px solid red;
+  }
+
+
 @media(max-width: 600px) {
     .ant-menu-item-icon {
         display: none !important;
