feat: add change password

--- a/src/components/ChangePassword/ChangePassword.module.css
+++ b/src/components/ChangePassword/ChangePassword.module.css
@@ -1,6 +1,7 @@
 .formLogin {
-    width: 368px;
     margin: 0 auto;
+    background: #fff;
+    padding: 64px 85px;
 }
 
 .formInputBlock {
@@ -25,10 +26,15 @@
     font-weight: 400;
     font-size: 16px;
     color: #2F54EB;
-    cursor: pointer;
 }
 
 .formBtn {
     background: '#2F54EB';
     border: '1px solid #2F54EB'
+}
+
+.regBtn {
+    background: #2F54EB;
+    border: 1px solid #2F54EB;
+    width: 100%;
 }
