--- a/src/pages/layouts/layout-auth-page/layout-auth-page.module.css
+++ b/src/pages/layouts/layout-auth-page/layout-auth-page.module.css
@@ -25,3 +25,19 @@
     justify-content: space-between;
     align-items: center;
 }
+
+@media (max-width: 600px) {
+    .wrapperAuthBlock {
+        padding: 32px 16px 80px 16px;
+    }
+}
+
+@media (max-width: 410px) {
+    .wrapperAuthBlock {
+       max-width: 328px;
+    }
+}
+
+
+
+
