--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -118,9 +118,9 @@
         z-index: 2;
         max-height: 640px;
         height: 100%;
-        -webkit-box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
-        -moz-box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
-        box-shadow: 2px 1px 8px 0px rgba(34, 60, 80, 0.2);
+        -webkit-box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
+        box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
     }
 
     .menuHide {
