--- a/src/pages/feedbacks-page/feedbacks-page.module.css
+++ b/src/pages/feedbacks-page/feedbacks-page.module.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position:  top center;
-    padding: 24px 24px 42px 24px;
+    padding: 24px 24px 42px;
 }
 
 .modal {
@@ -26,6 +26,7 @@
 
 .reviews {
     width: 100%;
+
     /* display: flex;
     flex-direction: column; */
 }
@@ -43,6 +44,24 @@
     display: flex;
     justify-content: flex-start;
 
+}
+
+.modalPostSuccess {
+    position: fixed;
+    z-index: 11;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(3px);
+    background: rgba(121,156,212, 0.5);
+}
+
+.modalPostSuccessInner {
+    background-color: #fff;
 }
 
 
