feat: add page calendar

--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -28,6 +28,10 @@
     display: none;
 }
 
+.calendarSetting {
+    justify-content: flex-end;
+}
+
 
 @media(max-width: 1001px){
     .headerTitle {
