--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -1,10 +1,14 @@
 .menu {
     background: #fff;
+    -webkit-box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
+    box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
 }
 
 .menuWrapper {
     height: 100%;
     position: relative;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -53,6 +57,7 @@
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
     cursor: pointer;
+    filter: drop-shadow(0 -9px 6px rgba(34, 60, 80, 0.2));
 }
 
 .sidebarBtn {
@@ -115,7 +120,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 2;
+        z-index: 100;
         max-height: 640px;
         height: 100%;
         -webkit-box-shadow: 2px 1px 8px 0 rgba(34, 60, 80, 0.2);
