--- a/src/pages/calendar-page/calendar-page.module.css
+++ b/src/pages/calendar-page/calendar-page.module.css
@@ -1,9 +1,9 @@
 .wrapperCalendar {
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #F0F5FF;
+    padding: 24px;
 }
 
 .events {
